src/test/ui/parser/issue-32501.stderr
error: expected identifier, found reserved identifier `_`
  --> $DIR/issue-32501.rs:7:13
   |
LL |     let mut _ = 0; //~ ERROR expected identifier, found reserved identifier `_`
   |             ^ expected identifier, found reserved identifier

error: aborting due to previous error

